--- a/app/views/plant_instances/show.html.erb
+++ b/app/views/plant_instances/show.html.erb
@@ -130,41 +130,15 @@
         borderColor: 'rgba(255, 0, 0, .7)',
         backgroundColor: 'rgba(255, 0, 0, .7)',
         fill: false,
-        data: [
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null
-        ],
-        yAxisID: 'y-axis-1',
+        data: <%= @max_temp_data.to_json %>,
+        yAxisID: 'y-axis-2',
       },{
         label: 'Low Temp',
         borderColor: 'rgba(0, 0, 255, .7)',
         backgroundColor: 'rgba(0, 0, 255, .7)',
         fill: false,
-        data: [
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null
-        ],
-        yAxisID: 'y-axis-1',
+        data: <%= @min_temp_data.to_json %>,
+        yAxisID: 'y-axis-2',
       },
       ]
     };
