--- a/app/views/weather_records/show.html.erb
+++ b/app/views/weather_records/show.html.erb
@@ -11,9 +11,9 @@
 </p>
 
 <p>
-  <% @weather_record.get_attributes.each do |attr| %>
-    <%= attr %><br/>
-  <% end %>
+  <%# @weather_record.get_attributes.each do |attr| %>
+    <%#= attr %><br/>
+  <% #end %>
 </p>
 Note hourly data is stored just not shown right now.<br/>
 
