added user photos to plants

--- a/app/views/growth_observations/_form.html.erb
+++ b/app/views/growth_observations/_form.html.erb
@@ -31,6 +31,13 @@
     <%= form.number_field :percent_at_stage %>
   </div>
 
+
+  <div class="field">
+    <%= form.label :picture %>
+    <%= form.file_field :picture %>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
