--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<% if @plant.image_url != '' and @plant.image_url != nil %>
+<% if @photos.count > 0 %>
+  <%= render partial: 'partials/picture_viewer' %>
+<% elsif @plant.image_url != '' and @plant.image_url != nil %>
   <img src=<%= @plant.image_url %> width='250' style="float:left;margin-right:3em;"/>
 <% elsif @has_open_farm_data %>
   <img src=<%= @open_farm_data['data']['attributes']['main_image_path'] %> width='250' style="float:left;margin-right:3em;"/>
