--- a/app/views/high_level_locations/show.html.erb
+++ b/app/views/high_level_locations/show.html.erb
@@ -97,16 +97,28 @@
               data: {
                   labels: <%= raw @date_labels.to_s %>,
                   datasets: [{
-                      label: 'Max Temperature',
+                      label: 'Avg Max Temperature',
                       borderColor: 'rgba(255, 0, 0, .7)',
                       fill: false,
                       data: <%= @max_temp_data.inspect %>
                   },
                   {
-                      label: 'Min Temperature',
-                      borderColor: 'rgba(0, 0, 255, .7)',
+                      label: 'Avg Min Temperature',
+                      borderColor: 'rgba(55, 242, 245, 1)',
                       fill: false,
                       data: <%= @min_temp_data.inspect %>
+                  },
+                  {
+                      label: 'Max Likely Temperature',
+                      borderColor: 'rgba(255, 0, 0, .3)',
+                      fill: false,
+                      data: <%= @max_deviation_data.inspect %>
+                  },
+                  {
+                      label: 'Min Likely Temperature',
+                      borderColor: 'rgba(0, 0, 255, .3)',
+                      fill: false,
+                      data: <%= @min_deviation_data.inspect %>
                   }]
               },
 
