add default high level location for user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,9 +17,14 @@
   </div>
 
   <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+    <%= form.label :high_level_location_id %>
+    <%= form.collection_select :high_level_location_id, HighLevelLocation.all, :id, :name, :include_blank => true %>
   </div>
+
+<!--   <div class="field">
+    <%#= form.label :password %>
+    <%#= form.password_field :password %>
+  </div> -->
 
   <div class="actions">
     <%= form.submit %>
