--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password digest</th>
+      <th>High Level Location</th>
       <th>Admin</th>
       <th colspan="3"></th>
     </tr>
@@ -16,7 +16,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
+        <td><%= user.high_level_location %></td>
         <td><%= user.admin %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
