chart with days to harvest and basic heat and frost risk warnings, all hard coded and for full growing cycle

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -123,6 +123,9 @@
 </div>
 <% end %>
 
+<%= render partial: 'partials/gdd_chart' %>
+<%= render partial: 'partials/harvest_chart' %>
+
 <%= link_to 'Edit', edit_plant_path(@plant) %> |
 <%= link_to 'Back', plants_path %>
 
