--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -122,9 +122,15 @@
 </p>
 </div>
 <% end %>
+<% if @gdd_data.count != 0 && @current_user != nil %>
+  <%= render partial: 'partials/gdd_chart' %>
+  <%= render partial: 'partials/harvest_chart' %>
+  <% @edit_stages = false %>
+  <% @species = @plant.species %>
+  <%= render partial: 'partials/growth_stage_requirements' %>
+<% end %>
 
-<%= render partial: 'partials/gdd_chart' %>
-<%= render partial: 'partials/harvest_chart' %>
+
 
 <%= link_to 'Edit', edit_plant_path(@plant) %> |
 <%= link_to 'Back', plants_path %>
