--- a/app/views/partials/_harvest_chart.html.erb
+++ b/app/views/partials/_harvest_chart.html.erb
@@ -1,4 +1,15 @@
 <div>
+	Plant during
+	<ul>
+		<% @start_planting_dates.each_with_index do |start, i| %>
+			<li><%= Date.ordinal(2021, start+1).strftime('%b-%d') %> to 
+				<%= Date.ordinal(2021, @stop_planting_dates[i]+1).strftime('%b-%d') %> for harvest from 
+				<%= Date.ordinal(2021, start+1 + @days_to_harvest_data[start]).strftime('%b-%d') %> to 
+				<%= Date.ordinal(2021, @stop_planting_dates[i]+1 + @days_to_harvest_data[@stop_planting_dates[i]]).strftime('%b-%d') %></li>
+		<% end %>
+	</ul>
+</div>
+<div>
 	<canvas id="harvest_chart"></canvas>
 	    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	    <script>
