--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -123,7 +123,7 @@
 </div>
 <% end %>
 <% if @gdd_data.count != 0 && @current_user != nil %>
-  <%= render partial: 'partials/gdd_chart' %>
+  <%#= render partial: 'partials/gdd_chart' %>
   <%= render partial: 'partials/harvest_chart' %>
   <% @edit_stages = false %>
   <% @species = @plant.species %>
