--- a/app/views/growth_observations/_form.html.erb
+++ b/app/views/growth_observations/_form.html.erb
@@ -37,6 +37,12 @@
     <%= form.file_field :picture %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= @current_user.id %>
+    <%= form.hidden_field :user_id %>
+  </div>
+
 
   <div class="actions">
     <%= form.submit %>
