--- a/app/views/divisions/_form.html.erb
+++ b/app/views/divisions/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.collection_select :kingdom_id, Kingdom.all, :id, :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :bbch_profile_id %>
+    <%= form.collection_select :bbch_profile_id, BbchProfile.all, :id, :name, :include_blank => true %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
