--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :order_id %>
-    <%= form.collection_select :order_id, Order.all, :id, :name, :include_blank => true %>
+    <%= form.collection_select :order_id, Order.all.order('name'), :id, :name, :include_blank => true %>
   </div>
 
   <div class="actions">
