--- a/app/views/genus/_form.html.erb
+++ b/app/views/genus/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :family_id %>
-    <%= form.collection_select :family_id, Family.all, :id, :name, :include_blank => true %>
+    <%= form.collection_select :family_id, Family.all.order('name'), :id, :name, :include_blank => true %>
   </div>
   
   <div class="actions">
