--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -23,7 +23,7 @@
   
   <div class="field">
     <%= form.label :plant_class_id %>
-    <%= form.collection_select :plant_class_id, PlantClass.all, :id, :name, :include_blank => true %>
+    <%= form.collection_select :plant_class_id, PlantClass.all.order('name'), :id, :name, :include_blank => true %>
   </div>
 
   <div class="actions">
