--- a/app/views/plant_classes/_form.html.erb
+++ b/app/views/plant_classes/_form.html.erb
@@ -23,7 +23,7 @@
   
   <div class="field">
     <%= form.label :division_id %>
-    <%= form.collection_select :division_id, Division.all, :id, :name, :include_blank => true %>
+    <%= form.collection_select :division_id, Division.all.order('name'), :id, :name, :include_blank => true %>
   </div>
 
   <div class="actions">
