Added Quantity to Plant Instance

--- a/app/views/plant_instances/_form.html.erb
+++ b/app/views/plant_instances/_form.html.erb
@@ -49,6 +49,11 @@
     <%= form.date_field :sprout_date %>
   </div>
   
+  <div class="field">
+    <%= form.label :quantity %>
+    <%= form.number_field :quantity %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
