--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -5,7 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th><%= link_to 'Plant', kingdoms_path %></th>
+
+        <th><%= link_to 'New Plant', new_plant_path %></th>
+
       <th><%= link_to 'Kingdom', kingdoms_path %></th>
       <th><%= link_to 'Division', divisions_path %></th>
       <th><%= link_to 'Class', plant_classes_path %></th>
@@ -56,4 +58,4 @@
 <% end %>
 </ul>
 
-<%= link_to 'New Plant', new_plant_path %>
+
