--- a/app/views/plant_instances/_form.html.erb
+++ b/app/views/plant_instances/_form.html.erb
@@ -54,6 +54,11 @@
     <%= form.number_field :quantity %>
   </div>
 
+  <div class="field">
+    <%= form.label :inactive %>
+    <%= form.check_box :inactive %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
