updated growth observation forms and passed in planted dates

--- a/app/views/growth_observations/show.html.erb
+++ b/app/views/growth_observations/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Added by :</strong>
-  <% if @growth_observation != nil %>
+  <% if @growth_observation.user != nil %>
    <%= link_to @growth_observation.user.email, @growth_observation.user %>
   <% end %>
 </p>
