--- a/app/views/growth_observations/index.html.erb
+++ b/app/views/growth_observations/index.html.erb
@@ -9,6 +9,7 @@
       <th>Observation date</th>
       <th>Bbch stage</th>
       <th>Percent at stage</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= growth_observation.observation_date %></td>
         <td><%= growth_observation.bbch_stage %></td>
         <td><%= growth_observation.percent_at_stage %></td>
+        <td><%= growth_observation.user_id %></td>
         <td><%= link_to 'Show', growth_observation %></td>
         <td><%= link_to 'Edit', edit_growth_observation_path(growth_observation) %></td>
         <td><%= link_to 'Destroy', growth_observation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
