--- a/app/views/growth_observations/_form.html.erb
+++ b/app/views/growth_observations/_form.html.erb
@@ -38,9 +38,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :user %>
+    <%= form.label :user_id %>
     <%= @current_user.id %>
-    <%= form.hidden_field :user %>
+    <%= form.hidden_field :user_id, @current_user.id %>
   </div>
 
 
