--- a/app/views/growth_observations/_form.html.erb
+++ b/app/views/growth_observations/_form.html.erb
@@ -40,7 +40,7 @@
   <div class="field">
     <%= form.label :user_id %>
     <%= @current_user.id %>
-    <%= form.hidden_field :user_id, @current_user.id %>
+    <%= form.hidden_field :user_id, :value => @current_user.id %>
   </div>
 
 
